compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__generic_function_snapshots@single_generic.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "fn test<T>() -> void {}"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            13811513517830038765,
        ): Function(
            FunctionDefinition {
                id: ItemId(
                    13811513517830038765,
                ),
                func_id: None,
                visibility: Private,
                name: Path {
                    root: [],
                    name: Type {
                        name: Identifier {
                            name: "test",
                            location: <internal>:3:7,
                        },
                        type_arguments: [],
                        location: <internal>:3:7,
                    },
                    location: <internal>:3:7,
                },
                parameters: [],
                type_parameters: TypeParameters {
                    inner: [
                        TypeParameter {
                            name: Identifier {
                                name: "T",
                                location: <internal>:8:9,
                            },
                            type_id: None,
                            type_param_id: None,
                            constraints: [],
                            location: <internal>:8:9,
                        },
                    ],
                },
                return_type: Type {
                    id: ItemId(
                        17666474489655347949,
                    ),
                    name: Path {
                        root: [],
                        name: Type {
                            name: Identifier {
                                name: "void",
                                location: <internal>:16:20,
                            },
                            type_arguments: [],
                            location: <internal>:16:22,
                        },
                        location: <internal>:16:22,
                    },
                    location: <internal>:16:22,
                },
                block: Some(
                    Block {
                        statements: [],
                        location: <internal>:21:23,
                    },
                ),
                location: <internal>:0:23,
            },
        ),
    },
    statements: {},
    expressions: {},
}
