compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__generic_method_snapshots@constrained_generics.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "impl Test { fn test<T1: Numeric, T2: Numeric>() -> void {} }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            10980377431797536133,
        ): Impl(
            Implementation {
                id: ItemId(
                    10980377431797536133,
                ),
                impl_id: None,
                target: Type {
                    id: ItemId(
                        16167930571419358001,
                    ),
                    name: SymbolName {
                        namespace: Some(
                            PathRoot {
                                segments: [],
                            },
                        ),
                        name: Named(
                            Identifier {
                                name: "Test",
                                location: <internal>:5:9,
                            },
                        ),
                        location: <internal>:5:9,
                    },
                    type_params: [],
                    location: <internal>:5:9,
                },
                methods: [
                    MethodDefinition {
                        id: ItemId(
                            12981536397272873320,
                        ),
                        method_id: None,
                        visibility: Private,
                        name: Identifier {
                            name: "test",
                            location: <internal>:15:19,
                        },
                        parameters: [],
                        type_parameters: [
                            TypeParameter {
                                name: Identifier {
                                    name: "T1",
                                    location: <internal>:20:22,
                                },
                                type_id: None,
                                type_param_id: None,
                                constraints: [
                                    Type {
                                        id: ItemId(
                                            9613957012452617865,
                                        ),
                                        name: SymbolName {
                                            namespace: Some(
                                                PathRoot {
                                                    segments: [],
                                                },
                                            ),
                                            name: Named(
                                                Identifier {
                                                    name: "Numeric",
                                                    location: <internal>:24:31,
                                                },
                                            ),
                                            location: <internal>:24:31,
                                        },
                                        type_params: [],
                                        location: <internal>:24:31,
                                    },
                                ],
                                location: <internal>:20:22,
                            },
                            TypeParameter {
                                name: Identifier {
                                    name: "T2",
                                    location: <internal>:33:35,
                                },
                                type_id: None,
                                type_param_id: None,
                                constraints: [
                                    Type {
                                        id: ItemId(
                                            9613957012452617865,
                                        ),
                                        name: SymbolName {
                                            namespace: Some(
                                                PathRoot {
                                                    segments: [],
                                                },
                                            ),
                                            name: Named(
                                                Identifier {
                                                    name: "Numeric",
                                                    location: <internal>:37:44,
                                                },
                                            ),
                                            location: <internal>:37:44,
                                        },
                                        type_params: [],
                                        location: <internal>:37:44,
                                    },
                                ],
                                location: <internal>:33:35,
                            },
                        ],
                        return_type: Some(
                            Type {
                                id: ItemId(
                                    2745571829241957363,
                                ),
                                name: SymbolName {
                                    namespace: Some(
                                        PathRoot {
                                            segments: [],
                                        },
                                    ),
                                    name: Named(
                                        Identifier {
                                            name: "void",
                                            location: <internal>:51:55,
                                        },
                                    ),
                                    location: <internal>:51:55,
                                },
                                type_params: [],
                                location: <internal>:51:55,
                            },
                        ),
                        block: Some(
                            Block {
                                statements: [],
                                location: <internal>:56:58,
                            },
                        ),
                        location: <internal>:12:58,
                    },
                ],
                type_parameters: [],
                location: <internal>:0:60,
            },
        ),
    },
    statements: {},
    expressions: {},
}
