compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__generic_method_snapshots@empty_generics.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "impl Test { fn test<>() -> void {} }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            9685703253129516901,
        ): Impl(
            Implementation {
                id: ItemId(
                    9685703253129516901,
                ),
                impl_id: None,
                target: Type {
                    id: ItemId(
                        13825029388148061585,
                    ),
                    name: Path {
                        root: [],
                        name: Type {
                            name: Identifier {
                                name: "Test",
                                location: <internal>:5:9,
                            },
                            type_arguments: [],
                            location: <internal>:5:9,
                        },
                        location: <internal>:5:9,
                    },
                    location: <internal>:5:9,
                },
                methods: [
                    MethodDefinition {
                        id: Method(
                            MethodId {
                                item: ItemId(
                                    9685703253129516901,
                                ),
                                index: Idx(
                                    0,
                                ),
                            },
                        ),
                        method_id: None,
                        visibility: Private,
                        name: Identifier {
                            name: "test",
                            location: <internal>:15:19,
                        },
                        parameters: [],
                        type_parameters: TypeParameters {
                            inner: [],
                        },
                        return_type: Type {
                            id: ItemId(
                                17666474489655347949,
                            ),
                            name: Path {
                                root: [],
                                name: Type {
                                    name: Identifier {
                                        name: "void",
                                        location: <internal>:27:31,
                                    },
                                    type_arguments: [],
                                    location: <internal>:27:31,
                                },
                                location: <internal>:27:31,
                            },
                            location: <internal>:27:31,
                        },
                        block: Some(
                            Block {
                                statements: [],
                                location: <internal>:32:34,
                            },
                        ),
                        location: <internal>:12:34,
                    },
                ],
                type_parameters: TypeParameters {
                    inner: [],
                },
                location: <internal>:0:36,
            },
        ),
    },
    statements: {},
    expressions: {},
}
