compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__generic_method_snapshots@no_generics.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "impl Test { fn test() -> void {} }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            9685703253129516901,
        ): Impl(
            Implementation {
                id: ItemId(
                    9685703253129516901,
                ),
                impl_id: None,
                target: Type {
                    id: ItemId(
                        13825029388148061585,
                    ),
                    name: Path {
                        root: [],
                        name: Type {
                            name: Identifier {
                                name: "Test",
                                location: <internal>:5:9,
                            },
                            type_arguments: [],
                            location: <internal>:5:11,
                        },
                        location: <internal>:5:11,
                    },
                    location: <internal>:5:11,
                },
                methods: [
                    MethodDefinition {
                        id: ItemId(
                            4609697254383574920,
                        ),
                        method_id: None,
                        visibility: Private,
                        name: Identifier {
                            name: "test",
                            location: <internal>:15:19,
                        },
                        parameters: [],
                        type_parameters: TypeParameters {
                            inner: [],
                        },
                        return_type: Type {
                            id: ItemId(
                                17666474489655347949,
                            ),
                            name: Path {
                                root: [],
                                name: Type {
                                    name: Identifier {
                                        name: "void",
                                        location: <internal>:25:29,
                                    },
                                    type_arguments: [],
                                    location: <internal>:25:31,
                                },
                                location: <internal>:25:31,
                            },
                            location: <internal>:25:31,
                        },
                        block: Some(
                            Block {
                                statements: [],
                                location: <internal>:30:32,
                            },
                        ),
                        location: <internal>:12:32,
                    },
                ],
                type_parameters: TypeParameters {
                    inner: [],
                },
                location: <internal>:0:34,
            },
        ),
    },
    statements: {},
    expressions: {},
}
