compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__generic_struct_snapshots@constrained_generic.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "struct Test<T: Numeric> {}"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            13825029388148061585,
        ): Type(
            Struct(
                StructDefinition {
                    id: ItemId(
                        13825029388148061585,
                    ),
                    type_id: None,
                    name: Path {
                        root: [],
                        name: Type {
                            name: Identifier {
                                name: "Test",
                                location: <internal>:7:11,
                            },
                            type_arguments: [],
                            location: <internal>:7:11,
                        },
                        location: <internal>:7:11,
                    },
                    visibility: Private,
                    builtin: false,
                    properties: [],
                    type_parameters: TypeParameters {
                        inner: [
                            TypeParameter {
                                name: Identifier {
                                    name: "T",
                                    location: <internal>:12:13,
                                },
                                type_id: None,
                                type_param_id: None,
                                constraints: [
                                    Type {
                                        id: ItemId(
                                            12406655113887153806,
                                        ),
                                        name: Path {
                                            root: [],
                                            name: Type {
                                                name: Identifier {
                                                    name: "Numeric",
                                                    location: <internal>:15:22,
                                                },
                                                type_arguments: [],
                                                location: <internal>:15:22,
                                            },
                                            location: <internal>:15:22,
                                        },
                                        location: <internal>:15:22,
                                    },
                                ],
                                location: <internal>:12:13,
                            },
                        ],
                    },
                    location: <internal>:0:26,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
