compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__generic_struct_snapshots@constrained_generics.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "struct Test<T1: Numeric, T2: Numeric> {}"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId {
            package: PackageId(
                0,
            ),
            index: Idx(
                1,
            ),
        }: Type(
            Struct(
                StructDefinition {
                    id: ItemId {
                        package: PackageId(
                            0,
                        ),
                        index: Idx(
                            1,
                        ),
                    },
                    type_id: None,
                    name: Path {
                        root: [],
                        name: Type {
                            name: Identifier {
                                name: "Test",
                                location: <internal>:7:11,
                            },
                            type_arguments: [],
                            location: <internal>:7:11,
                        },
                        location: <internal>:7:11,
                    },
                    visibility: Private,
                    builtin: false,
                    properties: [],
                    type_parameters: TypeParameters {
                        inner: [
                            TypeParameter {
                                name: Identifier {
                                    name: "T1",
                                    location: <internal>:12:14,
                                },
                                type_id: None,
                                type_param_id: None,
                                constraints: [
                                    Type {
                                        id: ItemId {
                                            package: PackageId(
                                                0,
                                            ),
                                            index: Idx(
                                                12406655113887153806,
                                            ),
                                        },
                                        name: Path {
                                            root: [],
                                            name: Type {
                                                name: Identifier {
                                                    name: "Numeric",
                                                    location: <internal>:16:23,
                                                },
                                                type_arguments: [],
                                                location: <internal>:16:23,
                                            },
                                            location: <internal>:16:23,
                                        },
                                        location: <internal>:16:23,
                                    },
                                ],
                                location: <internal>:12:14,
                            },
                            TypeParameter {
                                name: Identifier {
                                    name: "T2",
                                    location: <internal>:25:27,
                                },
                                type_id: None,
                                type_param_id: None,
                                constraints: [
                                    Type {
                                        id: ItemId {
                                            package: PackageId(
                                                0,
                                            ),
                                            index: Idx(
                                                12406655113887153806,
                                            ),
                                        },
                                        name: Path {
                                            root: [],
                                            name: Type {
                                                name: Identifier {
                                                    name: "Numeric",
                                                    location: <internal>:29:36,
                                                },
                                                type_arguments: [],
                                                location: <internal>:29:36,
                                            },
                                            location: <internal>:29:36,
                                        },
                                        location: <internal>:29:36,
                                    },
                                ],
                                location: <internal>:25:27,
                            },
                        ],
                    },
                    location: <internal>:0:40,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
